[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-cache"
version = "0.1.0"
description = "One line of code. Zero config. Caches every AI call automatically."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "my-ai-stack", email = "walidsobhi@example.com"}
]
maintainers = [
    {name = "my-ai-stack", email = "walidsobhi@example.com"}
]
keywords = ["ai", "cache", "llm", "openai", "anthropic", "groq"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/my-ai-stack/ai-cache"
Repository = "https://github.com/my-ai-stack/ai-cache"
Documentation = "https://github.com/my-ai-stack/ai-cache#readme"
Issues = "https://github.com/my-ai-stack/ai-cache/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cache*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
